--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 
 	<!-- libs -->
-	<script type="text/javascript" src="libs/quojs/quo.js"></script>
+	<script type="text/javascript" src="libs/quojs-2.3.1/quo.js"></script>
   	<script type="text/javascript" src="libs/lungo-2.1.0/lungo.js"></script>
 
     <!-- Lungo - Sandbox App -->
