correct reference to css

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <meta http-equiv="cleartype" content="on">
     
     <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="css/ungo-2.1.0/lungo.css">
-    <link rel="stylesheet" href="css/ungo-2.1.0/lungo.icon.css">
+    <link rel="stylesheet" href="css/lungo-2.1.0/lungo.css">
+    <link rel="stylesheet" href="css/lungo-2.1.0/lungo.icon.css">
     
 </head>
 	
