correct reference to css

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <!-- Main Stylesheet -->
     <link rel="stylesheet" href="css/lungo-2.1.0/lungo.css">
     <link rel="stylesheet" href="css/lungo-2.1.0/lungo.icon.css">
+    <link rel="stylesheet" href="css/lungo-2.1.0/lungo.icon.brand.css">
+    <link rel="stylesheet" href="css/lungo-2.1.0/theme.lungo.css">
     
 </head>
 	
@@ -29,11 +31,11 @@
 		
  		<header data-title="Notes App">
  			<nav> 				
- 				<a href="#Notes" data-router="article" class="left">
+ 				<a href="#main" data-router="article" class="left" data-icon="home">
             		Home
         		</a>
         		
- 				<a href="#addNotes" data-router="article" class="right">
+ 				<a href="#writeNotes" data-router="article" class="right">
             		+
         		</a>
         	</nav>
