--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!-- libs -->
   	
   	<!-- Models, Views, utils -->
-    <script type="text/javascript" src="js/utils/storage.js"></script>
+    <script type="text/javascript" src="utils/storage.js"></script>
 
 	<meta name="description" content="Notes App">
     <meta name="author" content="Fatima Gilmartin Luquero (fatymoore@gmail.com)">
@@ -69,7 +69,6 @@
     	</article>		
 	</section>
 
-
 	<!-- libs -->
 	<script type="text/javascript" src="libs/quojs-2.3.1/quo.js"></script>
   	<script type="text/javascript" src="libs/lungo-2.1.0/lungo.js"></script>
@@ -81,9 +80,7 @@
             version:	'1.0',
             history:	false
         });
-    </script>
-    
+    </script>    
 </body>
-
 </html>
 
