--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             		Home
         		</a>
         		
- 				<a href="#writeNotes" data-router="article" class="right">
+ 				<a href="#writeNotes" data-router="section" class="right">
             		+
         		</a>
         	</nav>
@@ -43,7 +43,7 @@
  		<footer>
 	        <nav>
 	            <a href="#main" data-router="article" data-icon="home"></a>
-	            <a href="#writeNotes" data-router="article" data-icon="right"></a>
+	            <a href="#writeNotes" data-router="section" data-icon="right"></a>
 	        </nav>
     	</footer>
  	
@@ -60,7 +60,7 @@
 	</section>
 	
 	<section id="writeNotes">
-		<header data-back="home blue"></header>
+		<header data-back="home blue" data-title="Write"></header>
 		
 		<article id="write" class="active">
         	Write
