--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
     <title>Notes App</title>
     
+    <!-- libs -->
+    <script type="text/javascript" src="libs/backbone/backbone.js"></script>
+    
 	<!-- Models, Views, utils -->
     <script type="text/javascript" src="utils/storage.js"></script>
 
