add template message

--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@
  	
 	    <article id="main-article" class="active list indented scroll">
 	        <ul>
+	        	<!--
 	            <li class="arrow">
 	                <strong>li.arrow 1 + Strong</strong>
 	            </li>
 	            <li class="arrow">
 	                <strong>li.arrow 2 + Strong</strong>
-	            </li>
+	            </li> -->
 	        </ul>
 	    </article>
 	</section>
@@ -84,6 +85,10 @@
         });
     </script>   
     
+    <!--
+    var template = _.template($('#tmpl_messagelist').html(), mapWithRecommendation);
+	$('#advancedMap').append(template);  
+    -->
 </body>
 </html>
 
