add lib underscore

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     
     <!-- libs -->
     <script type="text/javascript" src="libs/backbone/backbone.js"></script>
+    <script type="text/javascript" src="libs/underscore/underscore.js"></script>
     
 	<!-- Models, Views, utils -->
     <script type="text/javascript" src="utils/storage.js"></script>
