create json mock

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script type="text/javascript" src="libs/underscore/underscore.js"></script>
     <script type="text/javascript" src="libs/backbone/backbone.js"></script>
     
+    <script type="text/javascript" src="utils/constants.js"></script>
+    
 	<!-- Models, Views, utils -->
     <script type="text/javascript" src="utils/storage.js"></script>
 
