icon changed to pencil

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
  				<a href="#main" data-router="article" class="left" data-icon="home">
             		Home
         		</a>
- 				<a href="#writeNotes" data-router="section" class="right" data-icon='plus'></a>
+ 				<a href="#writeNotes" data-router="section" class="right" data-icon='pencil'></a>
         	</nav>
  		</header>
  		<article id="main-article" class="active list indented scroll">
