--- a/index.html
+++ b/index.html
@@ -67,9 +67,24 @@
 		<header data-back="home blue" data-title="Write"></header>
 		
 		<article id="write" class="active">
+			<!--
             <label for='title'>Title</label><input type='text' id='title' name='title' placeholder='title' required/> <br>
             <label for="description">Description</label><input type='comment' id='description' name='description' placeholder='description'/> </br>
             <label for="Priority"></label><input type='number' min='1' max='5' value='1' id='priority' name='priority'/>
+           -->
+           
+			<section id="form" data-transition="slide" class="show active">           	
+				<div class="form">
+		            <fieldset>
+		                <label>Title:</label>
+		                <input type="text">
+		            </fieldset>
+		            <fieldset data-icon="pencil">
+		                <label>Message:</label>
+		                <textarea></textarea>
+		            </fieldset>
+	        	</div>
+			</section>           
     	</article>
         <footer>
             <nav>
