--- a/index.html
+++ b/index.html
@@ -78,12 +78,16 @@
 				<div class="form">
 		            <fieldset>
 		                <label>Title:</label>
-		                <input type="text">
+		                <input type="text" id='title'>
 		            </fieldset>
 		            <fieldset data-icon="pencil">
 		                <label>Message:</label>
-		                <textarea></textarea>
+		                <textarea id='message'></textarea>
 		            </fieldset>
+                    <fieldset>
+                        <label for="Priority"></label>
+                        <input type='number' min='1' max='5' value='1' id='priority' name='priority'/>
+                    </fieldset>
 	        	</div>
 			</section>
     	</article>
