--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <footer>
             <nav>
                 <a href="#back" data-router="section" data-icon="left"></a>
-                <a href='#back'data-router='section' data-icon='check' onclick='javascript:saveNote();'></a>
+                <a data-router='section' data-icon='check' onclick='saveNote();'></a>
             </nav>
         </footer>
 	</section>
